--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="rss2cw.github.io/morse.js"></script>
+  <script src="http://adamk.me/rss2cw.github.io/morse.js"></script>
   <style type="text/css">
     pre {
         white-space: pre-wrap;       /* CSS 3 */
